# python_dio_desafio_natural_ou_fake_natty

./: .gitignore  README.md  main.py  pyproject.toml
arquivos-podcast/: podcast-01.txt  podcast-02.txt
controllers/: podcast_controller.py
models/: podcast.py
services/: even_labs_service.py  gpt_service.py
views/: user_interface.py
